# xm-2-wav

./: .gitattributes  .gitignore  INSTALL.md  LICENSE  NOTICE  README.md  build.ps1  pyproject.toml  requirements.txt  xm_to_wav.py
.github/workflows/: build.yml
assets/: xm2wav.icns
packaging/linux/: .SRCINFO  PKGBUILD  build_appimage.sh  build_linux.sh  xm-2-wav.desktop
packaging/macos/: build_app.sh
packaging/windows/: xm-2-wav.iss
tests/: gui_demo.py  gui_render.py  gui_smoke.py  make_test_xm.py  selftest.py
tools/: capture_ui.py  make_icon.py
web/: index.html
xmwav/: __init__.py  __main__.py  app.py  cli.py  convert.py  engine.py  player.py  theme.py  wavio.py  xmedit.py
